--- a/MvcAzureCoreSaSTablesStorage/Views/Shared/_Layout.cshtml
+++ b/MvcAzureCoreSaSTablesStorage/Views/Shared/_Layout.cshtml
@@ -23,6 +23,18 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" 
+                            asp-controller="Alumnos" 
+                            asp-action="Index">Alumnos Token</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" 
+                            asp-controller="Migracion" 
+                            asp-action="Index">
+                                Migrar Alumnos Azure
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
